Initial Bubble View Update; small update to alignment view (disables custom color scheme when showing AAs and fixes visual bug when showing codons)

--- a/src/app/visualizationComponents/BubbleComponent/bubble.component.scss
+++ b/src/app/visualizationComponents/BubbleComponent/bubble.component.scss
@@ -20,7 +20,7 @@
     }
   }
 }
-.aggregate-wrapper {
+.bubble-wrapper {
   padding: 50px 20px 5px 20px;
 }
 
